fix: made flex center layout desktop only as it was shifting everything in mobile

--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -55,8 +55,10 @@
   }
 
   &flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include breakpoint-up(medium) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
 }
